[gd_scene load_steps=4 format=3 uid="uid://8xc2djp24y40"]

[ext_resource type="Script" path="res://gui/PreviewPanel.gd" id="1_iu5lk"]
[ext_resource type="Script" path="res://gui/PreviewArea.gd" id="2_mpak3"]
[ext_resource type="PackedScene" uid="uid://kvxy6miofpxj" path="res://gui/components/KnobControl.tscn" id="3_1mn17"]

[node name="PreviewPanel" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 192.0
grow_horizontal = 2
theme_type_variation = &"PreviewPanel"
script = ExtResource("1_iu5lk")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PreviewArea" type="Control" parent="Layout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"PreviewArea"
script = ExtResource("2_mpak3")

[node name="Controls" type="VBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="PreviewButton" type="Button" parent="Layout/Controls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 36)
layout_mode = 2
text = "CRASH!"

[node name="LengthKnob" parent="Layout/Controls" instance=ExtResource("3_1mn17")]
unique_name_in_owner = true
layout_mode = 2

[node name="NoteKnob" parent="Layout/Controls" instance=ExtResource("3_1mn17")]
unique_name_in_owner = true
layout_mode = 2
